<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/frame_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/loginbackground">

    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/username"
        android:gravity="center_vertical"
        android:background="@drawable/textborder"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:hint="@string/userName"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="#fff"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:background="@drawable/textborder"
        android:id="@+id/password"
        android:textColor="#fff"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="20dp"
        android:hint="@string/pwName"
        android:maxLines="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:id="@+id/signIn"
        android:layout_marginTop="39dp"
        android:textColor="#fff"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignRight="@+id/password"
        android:background="@drawable/buttonborder"
        android:layout_alignEnd="@+id/password" />

    <TextView
        android:id="@+id/lostSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/lostPassword"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:src="@drawable/happyparktrans1"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="69dp" />



</RelativeLayout>
