<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="fill_parent"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="180dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.gms.maps.MapView
            android:id="@+id/mapCardView"
            android:clickable="true"
            android:enabled="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="100dp"
            android:layout_width="150dp"
            android:layout_alignParentTop="true" />

        <TextView
            android:text="@string/added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/mapCardView"
            android:layout_toEndOf="@+id/mapCardView"
            android:id="@+id/addedAt"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/state"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_alignBottom="@+id/mapCardView"
            android:layout_alignLeft="@+id/type"
            android:layout_alignStart="@+id/type"
            android:layout_marginTop="15dp" />

        <TextView
            android:text="@string/segnalations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mapCardView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"
            android:id="@+id/signal"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginLeft="5dp" />

        <TextView
            android:text="@string/typology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_above="@+id/state"
            android:layout_alignLeft="@+id/addedAt"
            android:layout_alignStart="@+id/addedAt"
            android:layout_marginTop="15dp" />


    </RelativeLayout>
</android.support.v7.widget.CardView>